src/core/styles/components/button/_button-theme.scss
$component-name: 'igx-button';

$components: register-component($components, #{$component-name});

@function igx-button-theme(
    // Global Button
    $button-roundness: null,
    // Default Button
    $text-color: null,
    $background-color: null,
    // Flat Button
    $flat-text-color: null,
    $flat-background: null,
    $flat-hover-background: null,
    $flat-focus-background: null,
    // Raised Button
    $raised-text-color: null,
    $raised-background: null,
    $raised-hover-background: null,
    $raised-focus-background: null,
    // Fab Button ( Floating action button )
    $fab-text-color: null,
    $fab-background: null,
    $fab-focus-background: null,
    // Icon Button
    $icon-color: null,
    $icon-background: null,
    $icon-hover-background: null,
    $icon-focus-background: null,
    // Disabled Button
    $disabled-color: null,
    $disabled-background: null
) {
    // Default Button
    @if not($text-color) and $background-color {
        $text-color: text-contrast($background-color);
    }
    // Flat Button
    @if not($flat-text-color) and $raised-background {
        $flat-text-color: text-contrast($raised-background);
    }
    // Raised Button
    @if not($raised-text-color) and $fab-background {
        $raised-text-color: text-contrast($fab-background);
    }
    // Fab Button ( Floating action button )
    @if not($fab-text-color) and $background-color {
        $fab-text-color: text-contrast($background-color);
    }

    // icon Button ( Floating action button )
    @if not($icon-color) and $icon-background {
        $icon-color: text-contrast($icon-background);
    }

    @return (
        // Global
        button-roundness: $button-roundness,
        // Default Button
        text-color: $text-color,
        background-color: $background-color,
        // Flat Button
        flat-text-color: $flat-text-color,
        flat-background: $flat-background,
        flat-hover-background: $flat-hover-background,
        flat-focus-background: $flat-focus-background,
        // Raised Button
        raised-text-color: $raised-text-color,
        raised-background: $raised-background,
        raised-hover-background: $raised-hover-background,
        raised-focus-background: $raised-focus-background,
        // Fab Button ( Floating action button )
        fab-text-color: $fab-text-color,
        fab-background: $fab-background,
        fab-focus-background: $fab-focus-background,
        // Icon Button
        icon-color:$icon-color,
        icon-background:$icon-background,
        icon-hover-background:$icon-hover-background,
        icon-focus-background:$icon-focus-background,
        // Disabled Button
        disabled-color:$disabled-color,
        disabled-background:$disabled-background,
    );
}
@mixin igx-button($theme, $palette: $default-palette) {
    $default-theme: igx-button-theme(
        // Global
        $button-roundness: 2px,
        // Default Button
        $text-color: igx-color($palette, grays, 800),
        $background-color: $white,
        // Flat button
        $flat-text-color: igx-color($palette, accent, 500),
        $flat-background: transparent,
        $flat-hover-background: igx-color($palette, grays, 100),
        $flat-focus-background: igx-color($palette, grays, 400),
        // Raised Button
        $raised-text-color: igx-contrast-color($palette, accent, 500),
        $raised-background: igx-color($palette, accent, 500),
        $raised-hover-background: igx-color($palette, accent, 700),
        $raised-focus-background: igx-color($palette, accent, 700),
        // Fab button ( Floating action button )
        $fab-text-color: igx-contrast-color($palette, accent, 500),
        $fab-background: igx-color($palette, accent, 500),
        $fab-focus-background: igx-color($palette, accent, 500),
        // Icon Button
        $icon-color: igx-color($palette, grays, 800),
        $icon-background: transparent,
        $icon-hover-background: igx-color($palette, grays, 100),
        $icon-focus-background: igx-color($palette, grays, 400),
        // Icon Button
        $disabled-color: igx-color($palette, grays, 400),
        $disabled-background: igx-color($palette, grays, 100)
    );

    // TODO remove all commented variables in this list, after the component is done.
    // 3. Buttons //

    // Shared Styles
    $button-border: none !default;
    $button-radius: 2px !default;
    $button-font-size: rem(14px, 16px) !default;
    $button-font-weight: normal !default;
    $button-width: rem(88px) !default;
    $button-height: rem(40px) !default;
    $button-padding: rem(8px) rem(16px) !default;
    $button-transition: all .25s ease-out !default;
    $button-round-radius: 50% !default;
    // Disabled Styles
    $button-disabled-shadow: none !default;
    // Raised Buttons
    $button-raised-shadow: $elevate-2 !default;
    $button-raised-focus-shadow: $elevate-8 !default;
    // Floating Buttons
    $button-floating-width: rem(56px) !default;
    $button-floating-height: $button-floating-width;
    $button-floating-shadow: $elevate-6 !default;
    $button-floating-hover-shadow: $elevate-12 !default;
    // Icon Buttons
    $button-icon-width: rem(36px, 16px) !default;
    $button-icon-height: $button-icon-width !default;
    $button-icon-font-size: rem(24px, 24px) !default;
    // Navbar Buttons
    $button-navbar-width: rem(24px, 16px) !default;
    $button-navbar-height: $button-navbar-width !default;
    $button-navbar-padding: 0 !default;

    $this: extend($default-theme, $theme);

    %igx-button-display {
        background: map-get($this, 'background-color');
        display: inline-block;
        position: relative;
        min-width: $button-width;
        padding: $button-padding;
        font-family: 'Titillium Web', sans-serif;
        font-size: $button-font-size;
        font-weight: $button-font-weight;
        text-align: center;
        color: map-get($this, 'text-color');
        border: $button-border;
        border-radius: map-get($this, 'button-roundness');
        text-transform: uppercase;
        cursor: pointer;
        user-select: none;
        outline: none;
        -webkit-tap-highlight-color: transparent;
        overflow: hidden;
        transition: $button-transition;
    }

    %igx-button--flat {
        background: map-get($this, 'flat-background');
        color: map-get($this, 'flat-text-color');

        &:hover {
            background: map-get($this, 'utton-flat-hover-background');
        }

        &:focus,
        &:active {
            background: map-get($this, 'flat-focus-background');
        }
    }

    %igx-button--raised {
        color: map-get($this, 'raised-text-color');
        background: map-get($this, 'raised-background');
        box-shadow: $button-raised-shadow;

        &:hover {
            background: map-get($this, 'raised-hover-background');
            box-shadow: $button-raised-shadow;
        }

        &:focus,
        &:active {
            background: map-get($this, 'raised-focus-background');
            box-shadow: $button-raised-focus-shadow;
        }
    }

    %igx-button--round {
        $block: bem--selector-to-string(&);
        display: flex;
        position: relative;
        flex-direction: row;
        justify-content: center;
        align-items: center;
        border: $button-border;
        border-radius: $button-round-radius;
        outline: none;
        cursor: pointer;
        transition: $button-transition;
        user-select: none;
        -webkit-tap-highlight-color: transparent;
        // hack to allow circular overflow in chrome ...
        filter: drop-shadow(0 0 0 $white);

        // reset for safari's inability to handle flex in buttons
        @at-root {
            button#{$block} {
                display: initial;
            }

            button#{$block} * {
                display: flex;
                justify-content: center;
            }
        }
    }

    %igx-button--fab {
        width: $button-floating-width;
        height: $button-floating-height;
        color: map-get($this, 'fab-text-color');
        background: map-get($this, 'fab-background');
        box-shadow: $button-floating-shadow;

        &:hover {
            box-shadow: $button-floating-hover-shadow;
        }

        &:focus,
        &:active {
            background: map-get($this, 'fab-focus-background');
        }
    }

    %igx-button--icon {
        width: $button-icon-width;
        height: $button-icon-width;
        font-size: $button-icon-font-size;
        color: map-get($this, 'icon-color');
        background: map-get($this, 'icon-background');

        &:hover {
            transition: $button-transition;
            background: map-get($this, 'icon-hover-background');
        }

        &:focus,
        &:active {
            background: map-get($this, 'icon-focus-background');
        }
    }

    %igx-button--navbar {
        display: block !important;
        width: $button-navbar-width;
        height: $button-navbar-height;
        font-size: $button-icon-font-size;
        color: inherit;
        padding: $button-navbar-padding;
    }

    %igx-button--disabled {
        color: map-get($this, 'disabled-color') !important;
        background: map-get($this, 'disabled-background') !important;
        pointer-events: none !important;
        box-shadow: $button-disabled-shadow !important;
        opacity: .8 !important;
    }
}

